Fix menu backdrop on mobile

--- a/carte/static/main.css
+++ b/carte/static/main.css
@@ -132,13 +132,12 @@ button {
 header {
   position: relative;
   z-index: 1;
-  &:has(#menu:popover-open)::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-  }
 }
 
+#menu-backdrop:has(~ #menu:popover-open) {
+  position: fixed;
+  inset: 0;
+}
 #menu-button {
   position: fixed;
   top: 1rem;
